--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header__contacts">
           <a class="header__phone" href="tel:380996444286">+38 (099) 644 42 86</a>
           <a class="header__email" href="#">mkhnk.alina@gmail.com</a>
-          <a data-fancybox data-src="#modal" href="javascript:;" class="header__btn" href="#">
+          <a data-fancybox data-src="#modal" href="javascript:;" class="header-btn" href="#">
             Связаться с нами</a>
         </div>
       </div>
@@ -364,7 +364,7 @@
             <div class="footer__text">
               Мы не только создаем сайты, но и предлагаем комплексные решения, которые лучше всего подойдут вашему бизнесу и помогут привлечь максимальное количество потенциальных клиентов.
             </div>
-            <a data-fancybox data-src="#modal" href="javascript:;" class="header__btn" href="#">
+            <a data-fancybox data-src="#modal" href="javascript:;" class="header-btn" href="#">
               Связаться с нами
             </a>
             <ul class="footer__list">
@@ -381,7 +381,7 @@
     </div>
     <div class="footer__copy">
       <div class="container">
-        <div class="copy__text">
+        <div class="copy-text">
           © 2020 by Alina Mokhonko.
         </div>
       </div>
